--- a/data/settings-example.ini
+++ b/data/settings-example.ini
@@ -11,6 +11,9 @@ UPLOADSSQLGZ=/var/www/cpandevel/uploads/uploads.db.gz
 UPLOADSSQLBZ=/var/www/cpandevel/uploads/uploads.db.bz2
 UPLOADSCSVGZ=/var/www/cpandevel/uploads/uploads.csv.gz
 UPLOADSCSVBZ=/var/www/cpandevel/uploads/uploads.csv.bz2
+RELEASEDB=../db/release.db
+RELEASEGZ=/var/www/cpandevel/release/release.db.gz
+RELEASEBZ=/var/www/cpandevel/release/release.db.bz2
 
 [TOCOPY]
 LIST=<<HERE
