--- a/META.yml
+++ b/META.yml
@@ -1,6 +1,6 @@
 --- #YAML:1.0
 name:                cpandevel
-version:             1.00
+version:             2.00
 abstract:            CPAN Testers Development
 license:             ~
 author:              
@@ -8,6 +8,14 @@ author:
 generated_by:        ExtUtils::MakeMaker version 6.42
 distribution_type:   module
 requires:     
+    Config::IniFiles:              0
+    File::Basename:                0
+    File::Copy:                    0
+    File::Path:                    0
+    Getopt::ArgvFile:              0
+    Getopt::Long:                  0
+    Number::Format:                0
+    Template:                      0
 meta-spec:
     url:     http://module-build.sourceforge.net/META-spec-v1.3.html
     version: 1.3
